--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "scripts": {},
   "author": "Ravi-Kaushish",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {}
 }
