Updated package.json acc to node-red conventions

--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "main": "index.js",
   "scripts": {},
   "author": "Ravi-Kaushish",
+  "keywords": [
+    "CG",
+    "ignite",
+    "node-red",
+    "odata"
+  ],
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {}
