--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@cgignite/ignite-odata",
   "node-red": {
     "nodes": {
-      "odata": "index.js"
+      "odata in": "lib/odata-in.js",
+      "odata out": "lib/odata-out.js"
     }
   },
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Odata Connector CG Ignite",
-  "main": "index.js",
   "scripts": {},
   "author": {
     "name": "Ravi Kant Sharma",
