--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "node-red": {
     "nodes": {
       "odata in": "lib/odata-in.js",
-      "odata out": "lib/odata-out.js"
+      "odata out": "lib/odata-out.js",
+      "odata client": "lib/odata-client.js"
     }
   },
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Odata Connector CG Ignite",
   "scripts": {},
   "author": {
@@ -21,6 +22,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {}
